added required field: thresholds to info endpoint/documentation/example
