# rally2-matching-system/go-example/models/info.go
@@ -1,8 +1,6 @@
 package models
 
 // Info Basic information describing the algorithm.
-//
-// swagger:model Info
 type Info struct {
 
 	// Name of algorithm
@@ -19,11 +17,16 @@ type Info struct {
 	CompanyName string
 
 	// The recommended allocation of CPUs for the deployed docker container.
-	RecommendedCpus int64
+	RecommendedCPUs int64
 
 	// The recommended allocation of memory (MB) for the deployed docker container.
 	RecommendedMem int64
 
-	// The email address of an engineer or other technical resource to contact in the event of an error running your service. This field may be left blank if desired.
+	// The email address of an engineer or other technical resource to contact in the event of an error running your service.
+	// This field may be left blank if desired.
 	TechnicalContactEmail string
+
+	// The list of threshold scores for various false match rates (FMRs) for your submitted matching system.
+	// Systems are required to provide at least thresholds for achieving FMRs for 1:500, 1:1e3,  1:1e4,  1:1e5,  1:1e6
+	Thresholds map[string] float64
 }
